--- a/WPF/SAM.Analytical.UI.WPF/Controls/MapInternalConditionsControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/MapInternalConditionsControl.xaml
@@ -17,9 +17,8 @@
         </ScrollViewer>
         <Button x:Name="button_SelectAll" Content="Select All" HorizontalAlignment="Left" Margin="10,0,0,58" VerticalAlignment="Bottom" Width="75" Click="button_SelectAll_Click"/>
         <Button x:Name="button_SelectNone" Content="Select None" HorizontalAlignment="Left" Margin="90,0,0,58" VerticalAlignment="Bottom" Width="75" Click="button_SelectNone_Click"/>
-        <ComboBox x:Name="comboBox_InternalConditionLibrary" HorizontalAlignment="Stretch" Height="23" Margin="162,10,10.4,0" Text="" VerticalAlignment="Top" SelectionChanged="comboBox_InternalConditionLibrary_SelectionChanged"/>
-        <ComboBox x:Name="comboBox_TextMap"  HorizontalAlignment="Stretch" Height="23" Margin="162,47,10.4,0" Text="" VerticalAlignment="Top" SelectionChanged="comboBox_TextMap_SelectionChanged"/>
 
-        <WPF:SelectSAMObjectComboBoxControl x:Name="selectSAMObjectComboBoxControl_InternalConditionLibrary" HorizontalAlignment="Stretch" Height="23" Margin="181,0,11,54" VerticalAlignment="Bottom" Visibility="Hidden"/>
+        <WPF:SelectSAMObjectComboBoxControl x:Name="selectSAMObjectComboBoxControl_InternalConditionLibrary" HorizontalAlignment="Stretch" Height="23" Margin="162,10,11,0" VerticalAlignment="Top" Visibility="Visible"/>
+        <WPF:SelectSAMObjectComboBoxControl x:Name="selectSAMObjectComboBoxControl_TextMap" HorizontalAlignment="Stretch" Height="23" Margin="162,50,11,0" VerticalAlignment="Top" Visibility="Visible"/>
     </Grid>
 </UserControl>
