--- a/WPF/SAM.Analytical.UI.WPF/Windows/ConvertToTBDWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/ConvertToTBDWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
         mc:Ignorable="d"
-        Title="Convert to TBD" Height="680" Width="350" ResizeMode="NoResize">
+        Title="Convert to Tas TBD" Height="680" Width="350" ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="253*"/>
@@ -20,5 +20,6 @@
         </StackPanel>
         <Button x:Name="button_OK" Grid.Row="1" Width="60" Height="20" Margin="0,0,80,3.8" HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="button_OK_Click" Grid.ColumnSpan="2">OK</Button>
         <Button x:Name="button_Cancel" IsCancel="True" Grid.Row="1" Grid.Column="1" Width="60" Height="20" Margin="0,0,10,3.8" HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="button_Cancel_Click">Cancel</Button>
+        <Label Content="* simulation using Tas EDSL" HorizontalAlignment="Left" Margin="10,0.2,0,0" Grid.Row="1" VerticalAlignment="Top" Width="189" FontFamily="Roboto Light" FontStyle="Italic" FontSize="11"/>
     </Grid>
 </Window>
