--- a/WPF/SAM.Analytical.UI.WPF/Windows/InternalConditionWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/InternalConditionWindow.xaml
@@ -1,13 +1,22 @@
-﻿<Window x:Class="SAM.Analytical.UI.WPF.InternalConditionWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
+        xmlns:WPF="clr-namespace:SAM.Core.UI.WPF;assembly=SAM.Core.UI.WPF" x:Class="SAM.Analytical.UI.WPF.InternalConditionWindow"
         mc:Ignorable="d"
-        Title="Internal Condition" Height="680" Width="1230">
+        Title="Internal Condition" Height="720" Width="1440">
     <Grid>
-        <local:InternalConditionControl HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="35"/>
+        </Grid.RowDefinitions>
+        <local:InternalConditionControl x:Name="internalConditionControl" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,-1.4,0"/>
+        <Button x:Name="button_Cancel" IsCancel="True" Content="Cancel" Grid.Row="1" Width="70" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,9.6,10.4" Click="button_Cancel_Click" Height="19"/>
+        <Button x:Name="button_OK" Content="OK" Grid.Row="1" Margin="0,5.8,84.6,10.4" HorizontalAlignment="Right" Width="70" Click="button_OK_Click"/>
+        <WPF:ListBoxControl x:Name="listBoxControl" HorizontalAlignment="Stretch" Height="634" VerticalAlignment="Top" Margin="7,6,1224.6,0"/>
+        <Button x:Name="button_Apply" Content="Apply" Grid.Row="1" Margin="0,6,160,10" HorizontalAlignment="Right" Width="70"/>
     </Grid>
 </Window>
