--- a/WPF/SAM.Analytical.UI.WPF/Controls/InternalConditionControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/InternalConditionControl.xaml
@@ -21,7 +21,7 @@
                 <Label Content="Name:" HorizontalAlignment="Left" Margin="10,7,0,0" VerticalAlignment="Top"/>
                 <Label Content="Design Temperature:" HorizontalAlignment="Left" Margin="10,38,0,0" VerticalAlignment="Top"/>
                 <Label Content="[°C]" HorizontalAlignment="Left" Margin="198,38,0,0" VerticalAlignment="Top"/>
-                <Button Content="Select" HorizontalAlignment="Left" Margin="351,10,0,0" VerticalAlignment="Top" Width="60"/>
+                <Button x:Name="button_SelectHeatingProfile" Content="Select" HorizontalAlignment="Left" Margin="351,10,0,0" VerticalAlignment="Top" Width="60" Click="button_SelectHeatingProfile_Click"/>
                 <Button x:Name="button_ViewHeatingProfile" Content="View" HorizontalAlignment="Left" Margin="286,10,0,0" VerticalAlignment="Top" Width="60" Click="button_ViewHeatingProfile_Click"/>
                 <WPF:MultipleValueTextBoxControl x:Name="multipleValueTextBoxControl_HeatingProfile_Name" HorizontalAlignment="Left" Height="21" Margin="60,10,0,0" VerticalAlignment="Top" Width="221"/>
                 <WPF:MultipleValueTextBoxControl x:Name="multipleValueTextBoxControl_HeatingProfile_DesignTemperature" HorizontalAlignment="Left" Height="23" Margin="133,38,0,0" VerticalAlignment="Top" Width="60"/>
@@ -45,7 +45,7 @@
                 <Label Content="Sensible Gain:" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top"/>
                 <TextBox x:Name="textBox_OccupancyProfile_CalculatedSensibleGain" HorizontalAlignment="Stretch" Height="23" Margin="241,40,131.2,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True" IsEnabled="False"/>
                 <Label Content="[W]" HorizontalAlignment="Left" Margin="289,40,0,0" VerticalAlignment="Top"/>
-                <Button Content="Select" HorizontalAlignment="Left" Margin="349,12,0,0" VerticalAlignment="Top" Width="60"/>
+                <Button x:Name="button_SelectOccupancyProfile" Content="Select" HorizontalAlignment="Left" Margin="349,12,0,0" VerticalAlignment="Top" Width="60" Click="button_SelectOccupancyProfile_Click"/>
                 <Button x:Name="button_ViewOccupancyProfile" Content="View" HorizontalAlignment="Left" Margin="284,12,0,0" VerticalAlignment="Top" Width="60" Click="button_ViewOccupancyProfile_Click"/>
                 <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_OccupancyProfile_SensibleGainPerPerson" HorizontalAlignment="Stretch" Height="23" Margin="100,40,254.2,0" VerticalAlignment="Top" Width="65" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
                 <Label Content="[W/p]" HorizontalAlignment="Left" Margin="166,40,0,0" VerticalAlignment="Top"/>
@@ -67,7 +67,7 @@
                 <Label Content="Sensible Gain:" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top"/>
                 <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_EquipmentSensibleProfile_SensibleGain" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="208,43,115,0" VerticalAlignment="Top"  PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
                 <Label Content="[W]" HorizontalAlignment="Left" Margin="291,40,0,0" VerticalAlignment="Top"/>
-                <Button Content="Select" HorizontalAlignment="Left" Margin="349,12,0,0" VerticalAlignment="Top" Width="60"/>
+                <Button x:Name="button_SelectEquipmentSensibleProfile" Content="Select" HorizontalAlignment="Left" Margin="349,12,0,0" VerticalAlignment="Top" Width="60" Click="button_SelectEquipmentSensibleProfile_Click"/>
                 <Button x:Name="button_ViewEquipmentSensibleProfile" Content="View" HorizontalAlignment="Left" Margin="284,12,0,0" VerticalAlignment="Top" Width="60" Click="button_ViewEquipmentSensibleProfile_Click"/>
                 <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_EquipmentSensibleProfile_SensibleGainPerArea" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="96,42,258.2,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
                 <Label Content="[W/m2]" HorizontalAlignment="Left" Margin="159,40,0,0" VerticalAlignment="Top"/>
@@ -85,7 +85,7 @@
                 <Label Content="Design Temperature:" HorizontalAlignment="Left" Margin="10,38,0,0" VerticalAlignment="Top"/>
                 <WPF:MultipleValueTextBoxControl x:Name="multipleValueTextBoxControl_CoolingProfile_DesignTemperature" HorizontalAlignment="Left" Height="23" Margin="133,38,0,0" VerticalAlignment="Top" Width="60"/>
                 <Label Content="[°C]" HorizontalAlignment="Left" Margin="191,38,0,0" VerticalAlignment="Top"/>
-                <Button Content="Select" HorizontalAlignment="Left" Margin="358,10,0,0" VerticalAlignment="Top" Width="60"/>
+                <Button x:Name="button_SelectCoolingProfile" Content="Select" HorizontalAlignment="Left" Margin="358,10,0,0" VerticalAlignment="Top" Width="60" Click="button_SelectCoolingProfile_Click"/>
                 <Button x:Name="button_ViewCoolingProfile" Content="View" HorizontalAlignment="Left" Margin="293,10,0,0" VerticalAlignment="Top" Width="60" Click="button_ViewCoolingProfile_Click"/>
                 <WPF:MultipleValueTextBoxControl x:Name="multipleValueTextBoxControl_CoolingProfile_Name" HorizontalAlignment="Left" Height="20" Margin="60,10,0,0" VerticalAlignment="Top" Width="228"/>
             </Grid>
@@ -99,7 +99,7 @@
                 <Label Content="Humidity:" HorizontalAlignment="Left" Margin="10,38,0,0" VerticalAlignment="Top"/>
                 <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_HumidificationProfile_Humidity" HorizontalAlignment="Stretch" Height="23" Margin="90,41,280.2,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
                 <Label Content="[-]" HorizontalAlignment="Left" Margin="144,38,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.902,0.461"/>
-                <Button Content="Select" HorizontalAlignment="Left" Margin="349,10,0,0" VerticalAlignment="Top" Width="60"/>
+                <Button x:Name="button_SelectHumidificationProfile" Content="Select" HorizontalAlignment="Left" Margin="349,10,0,0" VerticalAlignment="Top" Width="60" Click="button_SelectHumidificationProfile_Click"/>
                 <Button x:Name="button_ViewHumidificationProfile" Content="View" HorizontalAlignment="Left" Margin="284,10,0,0" VerticalAlignment="Top" Width="60" Click="button_ViewHumidificationProfile_Click"/>
                 <WPF:MultipleValueTextBoxControl x:Name="multipleValueTextBoxControl_HumidificationProfile_Name" HorizontalAlignment="Left" Height="20" Margin="60,10,0,0" VerticalAlignment="Top" Width="219"/>
 
@@ -115,7 +115,7 @@
                 <Label Content="Dehumidity:" HorizontalAlignment="Left" Margin="10,38,0,0" VerticalAlignment="Top"/>
                 <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_DehumidificationProfile_Dehumidity" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="89,41,255.6,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
                 <Label Content="[-]" HorizontalAlignment="Left" Margin="166,38,0,0" VerticalAlignment="Top"/>
-                <Button Content="Select" HorizontalAlignment="Left" Margin="358,10,0,0" VerticalAlignment="Top" Width="60"/>
+                <Button x:Name="button_SelectDehumidificationProfile" Content="Select" HorizontalAlignment="Left" Margin="358,10,0,0" VerticalAlignment="Top" Width="60" Click="button_SelectDehumidificationProfile_Click"/>
                 <Button x:Name="button_ViewDehumidificationProfile" Content="View" HorizontalAlignment="Left" Margin="293,10,0,0" VerticalAlignment="Top" Width="60" Click="button_ViewDehumidificationProfile_Click"/>
 
             </Grid>
@@ -129,7 +129,7 @@
                 <Label Content="Infiltration:" HorizontalAlignment="Left" Margin="10,38,0,0" VerticalAlignment="Top"/>
                 <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_InfiltrationProfile_Infiltration" HorizontalAlignment="Stretch" Height="23" Margin="95,41,267.8,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
                 <Label Content="[ACH]" HorizontalAlignment="Left" Margin="149,38,0,0" VerticalAlignment="Top"/>
-                <Button Content="Select" HorizontalAlignment="Left" Margin="347,10,0,0" VerticalAlignment="Top" Width="60"/>
+                <Button x:Name="button_SelectInfiltrationProfile" Content="Select" HorizontalAlignment="Left" Margin="347,10,0,0" VerticalAlignment="Top" Width="60" Click="button_SelectInfiltrationProfile_Click"/>
                 <Button x:Name="button_ViewInfiltrationProfile" Content="View" HorizontalAlignment="Left" Margin="282,10,0,0" VerticalAlignment="Top" Width="60" Click="button_ViewInfiltrationProfile_Click"/>
                 <WPF:MultipleValueTextBoxControl x:Name="multipleValueTextBoxControl_InfiltrationProfile_Name" HorizontalAlignment="Left" Height="20" Margin="60,10,0,0" VerticalAlignment="Top" Width="217"/>
             </Grid>
@@ -144,7 +144,7 @@
                 <Label Content="Lighting Gain:" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top"/>
                 <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_LightingProfile_LightingGain" HorizontalAlignment="Stretch" Height="23" Width="65"  Margin="239,43,124,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
                 <Label Content="[W]" HorizontalAlignment="Left" Margin="305,40,0,0" VerticalAlignment="Top"/>
-                <Button Content="Select" HorizontalAlignment="Left" Margin="358,12,0,0" VerticalAlignment="Top" Width="60"/>
+                <Button x:Name="button_SelectLightingProfile" Content="Select" HorizontalAlignment="Left" Margin="358,12,0,0" VerticalAlignment="Top" Width="60" Click="button_SelectLightingProfile_Click"/>
                 <Button x:Name="button_ViewLightingProfile" Content="View" HorizontalAlignment="Left" Margin="293,12,0,0" VerticalAlignment="Top" Width="60" Click="button_ViewLightingProfile_Click"/>
                 <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_LightingProfile_LightingGainPerArea" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="99,42,236,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
                 <Label Content="[W/m2]" HorizontalAlignment="Left" Margin="181,40,0,0" VerticalAlignment="Top"/>
@@ -166,7 +166,7 @@
                 <Label Content="Latent Gain:" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top"/>
                 <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_EquipmentLatentProfile_LatentGain" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="241,43,122,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
                 <Label Content="[W]" HorizontalAlignment="Left" Margin="307,40,0,0" VerticalAlignment="Top"/>
-                <Button Content="Select" HorizontalAlignment="Left" Margin="358,12,0,0" VerticalAlignment="Top" Width="60"/>
+                <Button x:Name="button_SelectEquipmentLatentProfile" Content="Select" HorizontalAlignment="Left" Margin="358,12,0,0" VerticalAlignment="Top" Width="60" Click="button_SelectEquipmentLatentProfile_Click"/>
                 <Button x:Name="button_ViewEquipmentLatentProfile" Content="View" HorizontalAlignment="Left" Margin="293,12,0,0" VerticalAlignment="Top" Width="60" Click="button_ViewEquipmentLatentProfile_Click"/>
                 <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_EquipmentLatentProfile_LatentGainPerArea" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="113,40,250,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
                 <Label Content="[W/m2]" HorizontalAlignment="Left" Margin="183,40,0,0" VerticalAlignment="Top"/>
