--- a/WPF/SAM.Analytical.UI.WPF/Windows/InternalConditionWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/InternalConditionWindow.xaml
@@ -17,6 +17,6 @@
         <Button x:Name="button_Cancel" IsCancel="True" Content="Cancel" Grid.Row="1" Width="70" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,9.6,10.4" Click="button_Cancel_Click" Height="19"/>
         <Button x:Name="button_OK" Content="OK" Grid.Row="1" Margin="0,5.8,84.6,10.4" HorizontalAlignment="Right" Width="70" Click="button_OK_Click"/>
         <WPF:ListBoxControl x:Name="listBoxControl" HorizontalAlignment="Stretch" Height="634" VerticalAlignment="Top" Margin="7,6,1224.6,0"/>
-        <Button x:Name="button_Apply" Content="Apply" Grid.Row="1" Margin="0,6,160,10" HorizontalAlignment="Right" Width="70"/>
+        <Button x:Name="button_Apply" Content="Apply" Grid.Row="1" Margin="0,6,160,10" HorizontalAlignment="Right" Width="70" Click="button_Apply_Click"/>
     </Grid>
 </Window>
