--- a/WPF/SAM.Analytical.UI.WPF/Controls/InternalConditionControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/InternalConditionControl.xaml
@@ -15,7 +15,7 @@
         <Button x:Name="button_Reset" Content="Reset" HorizontalAlignment="Left" Margin="222,38,0,0" VerticalAlignment="Top" Width="75" Click="button_Reset_Click"/>
         <GroupBox HorizontalAlignment="Left" Height="97" Margin="6,104,0,0" VerticalAlignment="Top" Width="437">
             <GroupBox.Header>
-                <CheckBox x:Name="checkBox_HeatingProfile" Content="Heating Profile"/>
+                <CheckBox x:Name="checkBox_HeatingProfile" Content="Heating Profile" Click="checkBox_HeatingProfile_Click"/>
             </GroupBox.Header>
             <Grid Margin="2,2,2,2">
                 <Label Content="Name:" HorizontalAlignment="Left" Margin="10,7,0,0" VerticalAlignment="Top"/>
@@ -30,12 +30,7 @@
         </GroupBox>
         <Label Content="Color:" HorizontalAlignment="Left" Margin="12,56,0,0" VerticalAlignment="Top"/>
         <Button x:Name="button_Color" Content="" HorizontalAlignment="Left" Margin="62,62,0,0" VerticalAlignment="Top" Width="235"/>
-        <Label Content="Area Per Person:" HorizontalAlignment="Left" Margin="510,18,0,0" VerticalAlignment="Top"/>
-        <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_AreaPerPerson" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="609,19,556.4,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
-        <Label Content="[m2/p]" HorizontalAlignment="Left" Margin="679,19,0,0" VerticalAlignment="Top"/>
-        <Label Content="Occupancy:" HorizontalAlignment="Left" Margin="510,49,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Stretch" Height="23" Margin="621,49,556.4,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-        <Label Content="[p]" HorizontalAlignment="Left" Margin="679,49,0,0" VerticalAlignment="Top"/>
+
         <GroupBox HorizontalAlignment="Left" Height="129" Margin="8,206,0,0" VerticalAlignment="Top" Width="435">
             <GroupBox.Header>
                 <CheckBox x:Name="checkBox_OccupancyProfile" Content="Occupancy Profile"/>
@@ -175,7 +170,7 @@
 
             </Grid>
         </GroupBox>
-        <GroupBox Header="Systems" HorizontalAlignment="Left" Height="316" Margin="897,104,0,0" VerticalAlignment="Top" Width="320">
+        <GroupBox Header="Systems" HorizontalAlignment="Left" Height="316" Margin="897,104,0,0" VerticalAlignment="Top" Width="320" IsEnabled="False">
             <Grid>
                 <Label Content="Ventilation:" HorizontalAlignment="Left" Margin="10,9,0,0" VerticalAlignment="Top"/>
                 <TextBox HorizontalAlignment="Stretch" Height="23" Margin="93,10,75,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True" IsEnabled="False"/>
@@ -197,6 +192,21 @@
                 <TextBox HorizontalAlignment="Stretch" Height="23" Margin="93,258,159,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True" IsEnabled="False"/>
                 <Label Content="[m3/s]" HorizontalAlignment="Left" Margin="154,257,0,0" VerticalAlignment="Top"/>
 
+            </Grid>
+        </GroupBox>
+        <GroupBox HorizontalAlignment="Left" Height="97" Margin="448,2,0,0" VerticalAlignment="Top" Width="444">
+            <GroupBox.Header>
+                <CheckBox x:Name="checkBox_Occupancy" Content="Occupancy"/>
+            </GroupBox.Header>
+            <Grid Margin="2,2,2,2">
+                <Label Content="Internal Condition:" HorizontalAlignment="Left" Margin="10,7,0,0" VerticalAlignment="Top"/>
+                <Label Content="Space:" HorizontalAlignment="Left" Margin="10,38,0,0" VerticalAlignment="Top"/>
+                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_AreaPerPerson" HorizontalAlignment="Stretch" Height="23" Width="65" Margin="245,10,118,0" VerticalAlignment="Top" PreviewTextInput="multipleValueComboBoxControl_PreviewTextInput"/>
+                <Label Content="[m2/p]" HorizontalAlignment="Left" Margin="315,7,0,0" VerticalAlignment="Top"/>
+                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_Occupancy" HorizontalAlignment="Stretch" Height="23" Margin="132,10,231,0" VerticalAlignment="Top"/>
+                <Label Content="[p]" HorizontalAlignment="Left" Margin="202,7,0,0" VerticalAlignment="Top"/>
+                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_SpaceOccupancy" HorizontalAlignment="Stretch" Height="23" Margin="132,38,231,0" VerticalAlignment="Top"/>
+                <Label Content="[p]" HorizontalAlignment="Left" Margin="202,35,0,0" VerticalAlignment="Top"/>
             </Grid>
         </GroupBox>
 
