--- a/WPF/SAM.Analytical.UI.WPF/Controls/ApertureControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/ApertureControl.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
              xmlns:WPF="clr-namespace:SAM.Core.UI.WPF;assembly=SAM.Core.UI.WPF" x:Class="SAM.Analytical.UI.WPF.ApertureControl"
              mc:Ignorable="d" 
-             d:DesignHeight="250" d:DesignWidth="300">
+             d:DesignHeight="270" d:DesignWidth="300">
     <Grid>
         <Label Content="Construction:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_ConstructionName" HorizontalAlignment="Left" Height="23" Margin="95,10,0,0" VerticalAlignment="Top" Width="195"/>
@@ -14,7 +14,7 @@
         <WPF:MultipleValueTextBoxControl x:Name="multipleValueTextBoxControl_Area" HorizontalAlignment="Left" Height="23" Margin="95,41,0,0" VerticalAlignment="Top" Width="99"/>
         <Label Content="Color:" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top"/>
         <Button x:Name="button_Color" Content="" HorizontalAlignment="Left" Margin="95,72,0,0" VerticalAlignment="Top" Width="195" Click="button_Color_Click"/>
-        <GroupBox HorizontalAlignment="Left" Height="129" Margin="10,103,0,0" VerticalAlignment="Top" Width="280">
+        <GroupBox HorizontalAlignment="Left" Height="157" Margin="10,103,0,0" VerticalAlignment="Top" Width="280">
             <GroupBox.Header>
                 <CheckBox x:Name="checkBox_OpeningProperties" Content="Opening Properties" Click="checkBox_OpeningProperties_Click"/>
             </GroupBox.Header>
@@ -23,8 +23,9 @@
                 <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_DischargeCoefficient" HorizontalAlignment="Left" Height="23" Margin="140,10,0,0" VerticalAlignment="Top" Width="114"/>
                 <Label Content="Function:" HorizontalAlignment="Left" Margin="10,38,0,0" VerticalAlignment="Top"/>
                 <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_Function" HorizontalAlignment="Left" Height="23" Margin="89,38,0,0" VerticalAlignment="Top" Width="165"/>
-                <Label Content="Description:" HorizontalAlignment="Left" Margin="10,66,0,0" VerticalAlignment="Top"/>
-                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_Description" HorizontalAlignment="Left" Height="23" Margin="89,66,0,0" VerticalAlignment="Top" Width="165"/>
+                <Label Content="Description:" HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top"/>
+                <WPF:MultipleValueComboBoxControl x:Name="multipleValueComboBoxControl_Description" HorizontalAlignment="Left" Height="23" Margin="89,100,0,0" VerticalAlignment="Top" Width="165"/>
+                <Label x:Name="label_FunctionExample" Content="zdwon,0,19.00,21.00,99.00" HorizontalAlignment="Left" Margin="89,69,0,0" VerticalAlignment="Top" Cursor="Hand" PreviewMouseDoubleClick="label_FunctionExample_PreviewMouseDoubleClick"/>
             </Grid>
         </GroupBox>
 
